--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,9 +22,9 @@
 }
 
 [data-theme="dark"] {
-  --white: #0a0a0a;
+  --white: #121212;
 
-  --gray-50: #333;
+  --gray-50: #212121;
   --gray-100: #292929;
   --gray-200: #afb2b1;
   --gray-500: #808080;
