--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -75,7 +75,7 @@ h6 {
 }
 
 h1 {
-  font-size: 2rem; //2 vezes o tamanho do font size do root
+  font-size: 2rem;
 }
 
 h2 {
@@ -84,4 +84,21 @@ h2 {
 
 button {
   cursor: pointer;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: var(--white);
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: var(--white);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--green-500);
 }
